Changes since last push:
 - Boulders now move sideways (but don't yet carry movables)
 - Added sprites for a couple more tiles

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.
 - You can place dirt on top of creatures, including yourself
 - Tiles have an opacity between 0 and 64, but right now it only matters whether it's zero or not.
 - Doesn't yet render background tiles (I haven't decided how they should look)
 - Background tiles don't affect light levels quite right

Known bugs:
 - Apparently the player can fit in gaps that they can't escape.

To do:
 - Tiles should have a function to decide which version of the sprite to
use, not make the map do that
 - rewrite almost all world generation code to use noise
 - stacking items, throwing / picking up items
 - Trees!
 - Store data for entities and sprites in a file instead of the source code
 - Actually save and load the map properly
 - Actually display background tiles